# game-of-life-fastflow

./: .gitignore  CMakeLists.txt  README.md  gol_config.hpp.in
src/: barrier.hpp  empty_visualizer.hpp  gol.hpp  gol_farm.hpp  main_fastflow.cpp  opencv_visualizer.hpp  terminal_visualizer.hpp
